using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorVariables
{
    public static string Idle = "m_Idle";
    public static string Run = "m_Run";
    public static string Attack = "m_Attack";
    public static string HasGun = "m_HasGun";
    public static string HasMelee = "m_HasMeleeWeapon";
    public static string Dead = "m_Dead";
}
